@@ -1,0 +1,4 @@
+# you will need to read the top level README, and run boostrap.py
+# and buildout in order to make pyjsbuild
+
+../../bin/pyjsbuild Toggle.py
