@@ -1,0 +1,11 @@
+<html>
+    <head>
+        <meta name="pygwt:module" content="Toggle">
+        <title>ToggleButton demo</title>
+        <link rel=stylesheet href="Toggle.css">
+    </head>
+    <body bgcolor="white">
+     <script language="javascript" src="pygwt.js"></script>
+    </body>
+</html>
+
